Fix T49150: make new 'operator categories' in search menu i18n-aware.